# plinycompute

./: CMakeLists.txt
applications/FFTest/: .FFTest.cc.swo  CMakeLists.txt  FFTest.cc
applications/FFTest/sharedLibraries/headers/: FFAggBlockToColStrip.h  FFAggBlockToRowStrip.h  FFInputLayerJoin.h  FFMatrixBlock.h  FFMatrixData.h  FFMatrixMeta.h  FFSingleToBlock.h  FFSingleToCol.h  FFSingleToRow.h
applications/FFTest/sharedLibraries/source/: FFAggBlockToColStrip.cc  FFAggBlockToRowStrip.cc  FFSingleToBlock.cc  FFSingleToCol.cc  FFSingleToRow.cc
